package com.hrconnect.android.common.util

object TestTags {

    const val FIRST_NAME_INPUT = "FIRST_NAME_INPUT"
    const val LAST_NAME_INPUT = "LAST_NAME_INPUT"
    const val EMAIL_INPUT = "EMAIL_INPUT"
    const val PASSWORD_INPUT = "PASSWORD_INPUT"
    const val CONFIRM_PASSWORD_INPUT = "CONFIRM_PASSWORD_INPUT"
    const val TERMS_CHECKBOX = "TERMS_CHECKBOX"
    const val REGISTER_BUTTON = "REGISTER_BUTTON"
}